--- a/index.html
+++ b/index.html
@@ -14,10 +14,20 @@
 <body>
     <!-- header start -->
     <header>
+        <div class="header-container">
         <div class="logo">
             <img src="images/icons/Grouplogo.png" alt="">
             <span>idea</span>
         </div>
+
+        <div class="pages">
+            <h3>Home</h3>
+            <h3>About</h3>
+            <h3>Works</h3>
+            <img src="images/icons/profile.png" alt="">         
+        </div>
+    </div>
+
     </header>
     <!-- header end -->
 
@@ -212,6 +222,8 @@
         </section>
     </main>
 
-
+<footer>
+    <h3>Copyrights, Nabila Kader</h3>
+</footer>
 </body>
 </html>
